formateo de las clases.